--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,13 @@
   "name": "skylark-backend",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push"
-  },
+  "dev": "tsx watch src/index.ts",
+  "build": "tsc",
+  "postinstall": "prisma generate",
+  "start": "node dist/index.js",
+  "db:generate": "prisma generate",
+  "db:push": "prisma db push"
+},
   "dependencies": {
     "@hono/node-server": "^1.19.4",
     "@prisma/client": "^5.9.0",
